{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 15,
  "lineage": "e66aac9b-5844-6deb-3b32-ff3f03516ae6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02166c47d457c16a3",
            "arn": "arn:aws:ec2:us-west-2:872661657994:instance/i-00a4f48a052a66abd",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": true
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ghola-provider-host-profile",
            "id": "i-00a4f48a052a66abd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "m5.xlarge",
            "ipv6_address_count": 0,
            "key_name": "ghola-deployer",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04200417cb26295d9",
            "private_dns": "ip-10-42-1-70.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.42.1.70",
            "public_dns": "ec2-16-148-176-155.us-west-2.compute.amazonaws.com",
            "public_ip": "16.148.176.155",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:us-west-2:872661657994:key/9314dc48-7dd8-4a7a-a351-0a11fed128ce",
                "throughput": 125,
                "volume_id": "vol-06496280d05ab78f0",
                "volume_size": 60,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05295409c3bb46d9b",
            "tags": {
              "Name": "ghola-provider-host"
            },
            "tags_all": {
              "Name": "ghola-provider-host"
            },
            "tenancy": "default",
            "user_data_replace_on_change": true,
            "vpc_security_group_ids": [
              "sg-0aa316eca65053bf9"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.host",
            "aws_iam_role.host",
            "aws_security_group.host",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.al2023"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:872661657994:internet-gateway/igw-0720f93b85a10b92c",
            "id": "igw-0720f93b85a10b92c",
            "owner_id": "872661657994",
            "tags": {
              "Name": "ghola-provider-igw"
            },
            "tags_all": {
              "Name": "ghola-provider-igw"
            },
            "vpc_id": "vpc-0f313f1b9c6fed45e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:872661657994:route-table/rtb-0994c4db9f08c0176",
            "id": "rtb-0994c4db9f08c0176",
            "owner_id": "872661657994",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0720f93b85a10b92c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ghola-provider-public-rt"
            },
            "tags_all": {
              "Name": "ghola-provider-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f313f1b9c6fed45e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e85485073d51717c",
            "route_table_id": "rtb-0994c4db9f08c0176",
            "subnet_id": "subnet-05295409c3bb46d9b"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:872661657994:security-group/sg-0aa316eca65053bf9",
            "description": "Outbound 443 only; inbound disabled (push-only WSS provider).",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "DNS outbound",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 53
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS / WSS outbound",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0aa316eca65053bf9",
            "ingress": [
              {
                "cidr_blocks": [
                  "100.40.59.16/32"
                ],
                "description": "Ops SSH (optional)",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ghola-provider-host",
            "name_prefix": "",
            "owner_id": "872661657994",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ghola-provider-host"
            },
            "tags_all": {
              "Name": "ghola-provider-host"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f313f1b9c6fed45e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:872661657994:subnet/subnet-05295409c3bb46d9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.42.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05295409c3bb46d9b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872661657994",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ghola-provider-public"
            },
            "tags_all": {
              "Name": "ghola-provider-public"
            },
            "vpc_id": "vpc-0f313f1b9c6fed45e"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:872661657994:vpc/vpc-0f313f1b9c6fed45e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.42.0.0/16",
            "default_network_acl_id": "acl-0d915255adebac13d",
            "default_route_table_id": "rtb-0d49b9ffef3047ef9",
            "default_security_group_id": "sg-0ef4fbc68b9a852df",
            "dhcp_options_id": "dopt-04f4e410170f012f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f313f1b9c6fed45e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d49b9ffef3047ef9",
            "owner_id": "872661657994",
            "tags": {
              "Name": "ghola-provider-vpc"
            },
            "tags_all": {
              "Name": "ghola-provider-vpc"
            }
          }
        }
      ]
    }
  ]
}